Added additional features like Like and Unlike post

--- a/templates/login-form.html
+++ b/templates/login-form.html
@@ -39,6 +39,7 @@
 
       <input type="submit">
     </form>
+    <p>Don't have an account, click <a href="/signup">HERE</a> to register.</p>
   </body>
 
 </html>
