--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -16,6 +16,6 @@
 
       <div class="error">{{error}}</div>
 
-      <input type="submit">
+      <input type="submit" value="submit blog">
     </form>
 {% endblock %}
