--- a/templates/signup-form.html
+++ b/templates/signup-form.html
@@ -64,6 +64,7 @@
       </table>
 
       <input type="submit">
+      <p>Already have an account, login <a href="/login">Here</a></p>
     </form>
   </body>
 
