--- a/static/main.css
+++ b/static/main.css
@@ -63,7 +63,7 @@ textarea {
   font-family: monospace;
 }
 
-input[type=submit] {
+input[value="submit blog"] {
   font-size: 24px;
 }
 
@@ -78,7 +78,10 @@ input[type=submit] {
 }
 
 .post + .post {
-    margin-top: 15px;
+    margin-top: 20px;
+}
+.post {
+    margin-bottom: 20px;
 }
 
 .post-heading {
@@ -101,5 +104,33 @@ input[type=submit] {
 
 .post-content {
     margin-top: 5px;
+    border-left: 6px solid red;
+    background-color: lightgrey;
+    border-radius: 3px;
 }
 
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+  text-shadow: 3px 3px 3px #aaa;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  size: 40px;
+}
+.comment-delete {
+    display: inline;
+    float: right;
+}
+.up-down {
+    float: left;
+    display: inline;
+}
+.like {
+
+}
+.likes {
+    font-size: 26px;
+}
+span {
+    display: inline-block;
+}
