--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=fontawesome">
   <link type="text/css" rel="stylesheet" href="/static/main.css" />
-
+  <link rel="stylesheet" href="static/bootstrap.min.css">
+  <script type="text/javascript" src="static/bootstrap.min.js"></script>
   <title>CS 253 Blog</title>
 </head>
 
 <body>
-  <a href="/blog" class="main-title">
-    CS 253 Blog
-  </a>
+<div class="container">
+  <nav class="row center-block text-weight navbar navbar-default">
+      <div class="container-fluid">
+              <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Blog</a>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                  <li class="active"><a href="/blog">Blog Home <span class="sr-only">(current)</span></a></li>
+                  <li><a href="/myblog">MyBlog</a></li>
+                  <li><a href="/blog/newpost">New Post</a></li>
+              </ul>
+              <form class="navbar-form navbar-left">
+                  <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Search">
+                  </div>
+                  <button type="submit" class="btn btn-default">Search</button>
+              </form>
+              <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#">About</a></li>
+              </ul>
+          </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+  </nav>
+
+  <div class="row center-block">
+    <a href="/blog" class="main-title">
+      CS 253 Blog
+    </a>
+  </div>
 
   <div class="login-area">
     {% if user %}
@@ -21,9 +58,10 @@
     {% endif %}
   </div>
 
-  <div id="content">
+  <div id="content" class="row center-block">
   {% block content %}
   {% endblock %}
+  </div>
   </div>
 </body>
 
