--- a/templates/post.html
+++ b/templates/post.html
@@ -1,15 +1,44 @@
-<div class="post">
-  <div class="post-heading">
+<div class="post container">
+  <div class="post-heading row center-block">
     <div class="post-title">
       {{p.subject}}
     </div>
 
     <div class="post-date">
-      {{p.created.strftime("%b %d, %Y")}}
+      <p>Submitted on {{p.created.strftime("%b %d, %Y")}} by
+        {{ p.blogger_name }}
+      </p>
     </div>
   </div>
 
-  <div class="post-content">
+  <div class="post-content row center-block">
     {{p._render_text | safe}}
   </div>
+  <div class="likes row center-block">
+    <span class="dis">
+      <a href="/likes/{{p.key().id()}}" class="fontawesome-thumbs-up like"></a>
+    </span>
+    <span >
+      <p>{{p.Likes.count()}}</p>
+    </span>
+    <span>
+      <a href="/unlikes/{{p.key().id()}}" class="fontawesome-thumbs-down"></a>
+    </span>
+    <span>
+      <p>{{p.Unlikes.count()}}</p>
+    </span>
+    <span>
+      <a href="#" class="fontawesome-comment"></a>
+    </span>
+    <span>
+      <form method="post" action="/delete/{{p.key().id()}}">
+        <input class="btn btn-info btn-sm" type="submit" value="Delete">
+      </form>
+    </span>
+  </div>
+  <div class="error">
+    {{ error }}
+  </div>
 </div>
+
+
