--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,9 @@
-<div> {{ error }} </div>
+<head>
+    <link rel="stylesheet" href="/static/main.css">
+</head>
+<div class="error">
+    <h3> {{ error }} </h3>
+</div>
 <div>
-<p>Click <a href="{{ referer }}">HERE</a> to go back to page.</p>
+<h3>Click <a href="{{ referer }}">HERE</a> to go back to page.</h3>
 </div>
