--- a/templates/editpost.html
+++ b/templates/editpost.html
@@ -1,21 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
+
   <h2>Edit Post</h2>
+  <form method="post">
+    <div class="container">
+      <div class="row center-block">
+        <label>
+          subject
+          <br>
+          <input type="text" name="subject" value="{{subject}}">
+        </label>
+      </div>
+      <br>
+      <div class="row center-block">
+        <label>
+          blog
+          <br>
+          <textarea name="content">{{content}}</textarea>
+        </label>
+      </div>
+    </div>
 
-    <form method="post">
-      <label>
-        <div>subject</div>
-        <input type="text" name="subject" value="{{subject}}">
-      </label>
-
-      <label>
-        <div>blog</div>
-        <textarea name="content">{{content}}</textarea>
-      </label>
-
-      <div class="error">{{error}}</div>
-      <input type="submit" Value = "Submit"> <a href='/blog'><h3>Cancel</h3></a>
-    </form>
+    <div class="error">{{error}}</div>
+    <input type="submit" Value = "Submit"> <a href='/blog'><h3>Cancel</h3></a>
+  </form>
 
 {% endblock %}
