--- a/templates/login-form.html
+++ b/templates/login-form.html
@@ -3,14 +3,16 @@
 <html>
   <head>
     <title>Login</title>
+    {# <link rel="stylesheet" type="text/css" href="/static/main.css"> #}
     <style type="text/css">
       .label {text-align: right}
       .error {color: red}
+      .new {margin: 0 auto}
     </style>
 
   </head>
 
-  <body>
+  <body class="new">
     <h2>Login</h2>
     <form method="post">
       <table>
