Change date and time format in permalink page

--- a/templates/permalink.html
+++ b/templates/permalink.html
@@ -9,7 +9,7 @@
     <br>
     <div class = "row">
         <div class="col-sm-6"> By
-            {{p.cAuthor}} at {{p.created_.strftime("%b %d, %Y")}}
+            {{p.cAuthor}} at {{p.created_.strftime("%H:%M%p on %b %d, %Y")}}
         </div>
         <div class="col-sm-9 comment-content">{{p.comment}}</div>
     </div>
