--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://use.fontawesome.com/a6e0586fab.js"></script>
   <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=fontawesome">
   <link type="text/css" rel="stylesheet" href="/static/main.css" />
   <link rel="stylesheet" href="/static/bootstrap.min.css">
