--- a/templates/post.html
+++ b/templates/post.html
@@ -17,19 +17,19 @@
   <div class="likes row center-block">
     <div class="left col-sm-6">
       <span>
-        <a href="/likes/{{p.key().id()}}" class="fontawesome-thumbs-up"></a>
+        <a href="/likes/{{p.key().id()}}" class="fa fa-thumbs-up"></a>
       </span>
       <span class="like">
         <p>{{p.Likes.count()}}</p>
       </span>
       <span>
-        <a href="/unlikes/{{p.key().id()}}" class="fontawesome-thumbs-down"></a>
+        <a href="/unlikes/{{p.key().id()}}" class="fa fa-thumbs-down"></a>
       </span>
       <span class="unlike">
         <p>{{p.Unlikes.count()}}</p>
       </span>
       <span>
-        <a href="/blog/{{p.key().id()}}" class="fontawesome-comment"></a>
+        <a href="/blog/{{p.key().id()}}" class="fa fa-comment"></a>
       <span class="comment">
         <p>{{p.comments.count()}}</p>
       </span>
