--- a/templates/signup-form.html
+++ b/templates/signup-form.html
@@ -1,71 +1,65 @@
-<!DOCTYPE html>
-
-<html>
-  <head>
-    <title>Sign Up</title>
-    <style type="text/css">
-      .label {text-align: right}
-      .error {color: red}
-    </style>
-
-  </head>
-
-  <body>
+{% extends "base.html" %}
+  {% block content %}
     <h2>Signup</h2>
     <form method="post">
-      <table>
-        <tr>
-          <td class="label">
-            Username
-          </td>
-          <td>
-            <input type="text" name="username" value="{{username}}">
-          </td>
-          <td class="error">
-            {{error_username}}
-          </td>
-        </tr>
+      <div class="row center-block">
+        <table>
+          <tr>
+            <td class="down">
+              Username
+            </td>
+            <td>
+              <input type="text" name="username" value="{{username}}">
+            </td>
+            <td class="error">
+              {{error_username}}
+            </td>
+          </tr>
 
-        <tr>
-          <td class="label">
-            Password
-          </td>
-          <td>
-            <input type="password" name="password" value="">
-          </td>
-          <td class="error">
-            {{error_password}}
-          </td>
-        </tr>
+          <tr>
+            <td class="down">
+              Password
+            </td>
+            <td>
+              <input type="password" name="password" value="">
+            </td>
+            <td class="error">
+              {{error_password}}
+            </td>
+          </tr>
 
-        <tr>
-          <td class="label">
-            Verify Password
-          </td>
-          <td>
-            <input type="password" name="verify" value="">
-          </td>
-          <td class="error">
-            {{error_verify}}
-          </td>
-        </tr>
+          <tr>
+            <td class="down">
+              Verify Password
+            </td>
+            <td>
+              <input type="password" name="verify" value="">
+            </td>
+            <td class="error">
+              {{error_verify}}
+            </td>
+          </tr>
 
-        <tr>
-          <td class="label">
-            Email (optional)
-          </td>
-          <td>
-            <input type="text" name="email" value="{{email}}">
-          </td>
-          <td class="error">
-            {{error_email}}
-          </td>
-        </tr>
-      </table>
-
-      <input type="submit">
+          <tr>
+            <td class="down">
+              Email (optional)
+            </td>
+            <td>
+              <input type="text" name="email" value="{{email}}">
+            </td>
+            <td class="error">
+              {{error_email}}
+            </td>
+          </tr>
+          <tr height = 20px></tr>
+          <tr>
+            <td></td>
+            <td>
+              <input type="submit" value="Submit Form">
+            </td>
+          </tr>
+        </table>
+      </div>
       <p>Already have an account, login <a href="/login">Here</a></p>
     </form>
-  </body>
-
-</html>
+  {% endblock %}
